Preloader on mobiles - fixed bug with scrrolling

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -17,19 +17,7 @@ body {
   padding-bottom: 49.2px;
 }
 
-@media (max-width: 768px) {
-
-  #global-container {
-    margin-top: 0;
-  }
-
-  #navbar-menu {
-    position: static;
-  }
-
-}
-
-.se-pre-con {
+#preloader {
   position: fixed;
   margin-top: 51px;
   left: 0;
@@ -41,7 +29,7 @@ body {
   overflow: hidden;
 }
 
-.se-pre-con > img {
+#preloader > img {
   position: relative;
   transform: translate(-50%, -50%);
   left: 50%;
@@ -70,4 +58,19 @@ body {
 
 #reset-password-throbber {
   display: none;
+}
+
+@media (max-width: 768px) {
+
+  #global-container {
+    margin-top: 0;
+  }
+
+  #navbar-menu {
+    position: static;
+  }
+
+  #preloader {
+    margin-top: 0;
+  }
 }
